--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,1 +1,52 @@
-<h1>Home</h1>
+<div class="jumbotron hero-technology">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand navbar-link" href="index-nl.html">
+                  <img src="assets/logo.png" width="120">
+                </a>
+                <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+            </div>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li role="presentation"><a href="index-nl.html" class="nav-item">AANBOD </a></li>
+                    <li role="presentation"><a href="about-nl.html" class="nav-item">OVER ONS</a></li>
+                    <li role="presentation"><a href="news-nl.html" class="nav-item">NIEUWS </a></li>
+                    <li role="presentation"><a href="contact-nl.html" class="nav-item">CONTACT </a></li>
+                    <li role="presentation"><a href="http://support.yuso.io/" class="nav-item">FAQ </a></li>
+                    <li class="dropdown show"><a class="dropdown-toggle nav-item" data-toggle="dropdown" aria-expanded="false" href="index-nl.html">NL <span class="caret"></span></a>
+                        <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                            <li role="presentation"><a href="index-en.html">EN - English</a></li>
+                            <li role="presentation"><a href="index-fr.html">FR - Francais</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <h1 class="text-center hero-title" id="slogan">Wij verkopen uw groene energie</h1>
+    <p class="bg-warning hero-subtitle"> Als eigenaar van groene productiecapaciteit kan u bij Yuso terecht voor een opkoopcontract op maat voor de groene energie die u netto injecteert op het net. </p>
+    <div><a class="btn btn-success btn-lg green" role="button" href="request-quote-simple-nl.html">Vraag een offerte</a></div>
+</div>
+
+<div class="container">
+    <div class="row margin-bottom">
+        <div class="col-md-12">
+            <h1 class="text-center text-success">Uw voordeel</h1></div>
+        <div class="col-md-4">
+            <h1 class="text-center"> <img src="assets/icon-savings.png" width="30%"></h1>
+            <h2 class="text-center">Betere opbrengst</h2>
+            <p class="text-center">Yuso streeft ernaar haar klanten de hoogst mogelijke prijs te bieden voor de door hen geproduceerde groene energie. Deze prijs kan makkelijk tot 20% hoger liggen dan uw huidige verkoopprijs. </p>
+        </div>
+        <div class="col-md-4">
+            <h1 class="text-center"><img src="assets/icon-settlement.png" width="30%"></h1>
+            <h2 class="text-center">Eenvoudige afrekening</h2>
+            <p class="text-center">Yuso brengt u maandelijks op de hoogte van de opbrengst van uw installatie met een transparante afrekening. U ontvangt uw geld steeds binnen de maand zonder bijkomende administratie door gebruik te maken van self-billing. </p>
+        </div>
+        <div class="col-md-4">
+            <h1 class="text-center"><img src="assets/icon-service.png" width="30%"></h1>
+            <h2 class="text-center">Premium service</h2>
+            <p class="text-center">Yuso verstrekt deskundig advies voor wat betreft de prestaties van uw installatie. Als Yuso klant houden wij uw investering voortdurend in de gaten. Aldus kunnen wij u wijzen op mogelijke gebreken en opportuniteiten. </p>
+        </div>
+    </div>
+</div>
