--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,4 @@
-<div class="jumbotron hero-technology">
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand navbar-link" href="index-nl.html">
-                  <img src="assets/logo.png" width="120">
-                </a>
-                <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-            </div>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li role="presentation"><a href="index-nl.html" class="nav-item">AANBOD </a></li>
-                    <li role="presentation"><a href="about-nl.html" class="nav-item">OVER ONS</a></li>
-                    <li role="presentation"><a href="news-nl.html" class="nav-item">NIEUWS </a></li>
-                    <li role="presentation"><a href="contact-nl.html" class="nav-item">CONTACT </a></li>
-                    <li role="presentation"><a href="http://support.yuso.io/" class="nav-item">FAQ </a></li>
-                    <li class="dropdown show"><a class="dropdown-toggle nav-item" data-toggle="dropdown" aria-expanded="false" href="index-nl.html">NL <span class="caret"></span></a>
-                        <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                            <li role="presentation"><a href="index-en.html">EN - English</a></li>
-                            <li role="presentation"><a href="index-fr.html">FR - Francais</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <h1 class="text-center hero-title" id="slogan">Wij verkopen uw groene energie</h1>
-    <p class="bg-warning hero-subtitle"> Als eigenaar van groene productiecapaciteit kan u bij Yuso terecht voor een opkoopcontract op maat voor de groene energie die u netto injecteert op het net. </p>
-    <div><a class="btn btn-success btn-lg green" role="button" href="request-quote-simple-nl.html">Vraag een offerte</a></div>
-</div>
+<header></header>
 
 <main>
     <router-outlet></router-outlet>
