--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,9 +1,3 @@
-div.jumbotron.hero-technology {
-    color: #fff;
-    text-align: center;
-    background: url(../../assets/banner.jpg);
-    background-size: cover;
-    background-position: center;
-    padding-top: 0px;
-    padding-bottom: 0px;
+div {
+
 }
