Changed jumbotron to translate

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,15 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand navbar-link" href="index-nl.html">
+                <a class="navbar-brand navbar-link" [routerLink]="['/home']">
                   <img src="assets/logo.png" width="120">
                 </a>
-                <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
             </div>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -23,7 +28,7 @@
             </div>
         </div>
     </nav>
-    <h1 class="text-center hero-title" id="slogan">Wij verkopen uw groene energie</h1>
-    <p class="bg-warning hero-subtitle"> Als eigenaar van groene productiecapaciteit kan u bij Yuso terecht voor een opkoopcontract op maat voor de groene energie die u netto injecteert op het net. </p>
-    <div><a class="btn btn-success btn-lg green" role="button" href="request-quote-simple-nl.html">Vraag een offerte</a></div>
+    <h1 class="text-center hero-title" id="slogan">{{ 'jumbotron__title' | translate }}</h1>
+    <p class="bg-warning hero-subtitle">{{ 'jumbotron__text' | translate }}</p>
+    <div><a class="btn btn-success btn-lg green" role="button" href="request-quote-simple-nl.html">{{ 'jumbotron__button' | translate }}</a></div>
 </div>
