Completed demo copy

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,10 +14,10 @@
             </div>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li role="presentation"><a href="#" class="nav-item">AANBOD </a></li>
-                    <li role="presentation"><a href="#" class="nav-item">OVER ONS</a></li>
-                    <li role="presentation"><a href="#" class="nav-item">NIEUWS </a></li>
-                    <li role="presentation"><a href="#" class="nav-item">CONTACT </a></li>
+                    <li role="presentation"><a href="#" class="nav-item">{{ 'nav_offer' | translate }}</a></li>
+                    <li role="presentation"><a href="#" class="nav-item">{{ 'nav_about' | translate }}</a></li>
+                    <li role="presentation"><a href="#" class="nav-item">{{ 'nav_news' | translate }}</a></li>
+                    <li role="presentation"><a href="#" class="nav-item">{{ 'nav_contact' | translate }}</a></li>
                     <li role="presentation"><a href="#" class="nav-item">FAQ </a></li>
                     <li class="dropdown">
                         <ul>
@@ -28,7 +28,7 @@
             </div>
         </div>
     </nav>
-    <h1 class="text-center hero-title" id="slogan">{{ 'jumbotron__title' | translate }}</h1>
-    <p class="bg-warning hero-subtitle">{{ 'jumbotron__text' | translate }}</p>
-    <div><a class="btn btn-success btn-lg green" role="button" href="request-quote-simple-nl.html">{{ 'jumbotron__button' | translate }}</a></div>
+    <h1 class="text-center hero-title" id="slogan">{{ 'jumbotron_title' | translate }}</h1>
+    <p class="bg-warning hero-subtitle">{{ 'jumbotron_text' | translate }}</p>
+    <div><a class="btn btn-success btn-lg green" role="button" href="request-quote-simple-nl.html">{{ 'jumbotron_button' | translate }}</a></div>
 </div>
