--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,34 +1,34 @@
 <div class="jumbotron hero-technology">
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand navbar-link" [routerLink]="['/home']">
-                  <img src="assets/logo.png" width="120">
-                </a>
-                <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li role="presentation"><a href="#" class="nav-item">{{ 'nav_offer' | translate }}</a></li>
-                    <li role="presentation"><a href="#" class="nav-item">{{ 'nav_about' | translate }}</a></li>
-                    <li role="presentation"><a href="#" class="nav-item">{{ 'nav_news' | translate }}</a></li>
-                    <li role="presentation"><a href="#" class="nav-item">{{ 'nav_contact' | translate }}</a></li>
-                    <li role="presentation"><a href="#" class="nav-item">FAQ </a></li>
-                    <li class="dropdown">
-                        <ul>
-                            <li *ngFor="let lang of supportedLanguages" (click)="selectLang(lang.value)">{{ lang.value }}</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <h1 class="text-center hero-title" id="slogan">{{ 'jumbotron_title' | translate }}</h1>
-    <p class="bg-warning hero-subtitle">{{ 'jumbotron_text' | translate }}</p>
-    <div><a class="btn btn-success btn-lg green" role="button" href="request-quote-simple-nl.html">{{ 'jumbotron_button' | translate }}</a></div>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand navbar-link" [routerLink]="['/home']">
+				  <img src="assets/logo.png" width="120">
+				</a>
+				<button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+			<div class="collapse navbar-collapse" id="navcol-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li role="presentation"><a href="#" class="nav-item">{{ 'nav_offer' | translate }}</a></li>
+					<li role="presentation"><a href="#" class="nav-item">{{ 'nav_about' | translate }}</a></li>
+					<li role="presentation"><a href="#" class="nav-item">{{ 'nav_news' | translate }}</a></li>
+					<li role="presentation"><a href="#" class="nav-item">{{ 'nav_contact' | translate }}</a></li>
+					<li role="presentation"><a href="#" class="nav-item">FAQ </a></li>
+					<li class="dropdown">
+						<ul>
+							<li *ngFor="let lang of supportedLanguages" (click)="selectLang(lang.value)">{{ lang.display }}</li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<h1 class="text-center hero-title" id="slogan">{{ 'jumbotron_title' | translate }}</h1>
+	<p class="bg-warning hero-subtitle">{{ 'jumbotron_text' | translate }}</p>
+	<div><a class="btn btn-success btn-lg green" role="button" href="request-quote-simple-nl.html">{{ 'jumbotron_button' | translate }}</a></div>
 </div>
